@@ -1,3 +1,7 @@
+2009-03-17  Matthias Wimmer  <m@tthias.eu>
+
+    * jabberd/lib/jabberdlib.h: fixing includes (by Robin Redeker)
+
 2009-03-16  Matthias Wimmer  <m@tthias.eu>
 
     * jabberd/deliver.cc: allow source addresses to be blocked
